客户端替换文本完成

--- a/src/dictionary_en_US.properties
+++ b/src/dictionary_en_US.properties
@@ -5,9 +5,10 @@ languageSwitch=switch language
 login=login
 register=register
 email=email
+userName=user name
 password=password
 passwordConfirm=password confirm
-userName=user name
+guestName=guest name
 age=age
 sex=sex
 male=male
