一点界面修正

--- a/src/dictionary_en_US.properties
+++ b/src/dictionary_en_US.properties
@@ -90,7 +90,7 @@ newPasswordConfirm=Password Confirm
 modifyConfim=Confirm
 
 #\u9a8c\u8bc1\u63d0\u793a\u4fe1\u606f
-noinput=no input\uff01
-noemail=email format\uff1a***@***.***\uff01
-noyear=age format\uff1apositive integers\uff01
-norepsw=two password is't same!
+noinput=no input!
+noemail=email format\uff1a***@***.***
+noyear=age format\uff1apositive integers!
+norepsw=two password is not same!
